--- a/backend/api-tester/style.css
+++ b/backend/api-tester/style.css
@@ -2,6 +2,17 @@
     box-sizing: border-box
 }
 
+#addUpdateDep {
+    background: #0b5cff;
+    color: #fff;
+    border: 0;
+    margin-top: 6px;
+    padding: 8px 8px;
+    border-radius: 6px;
+    cursor: pointer;
+
+}
+
 body {
     font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
     line-height: 1.4;
@@ -202,11 +213,11 @@ small code {
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
     background-color: rgba(255, 99, 0, 0.53);
-    
+
     box-shadow: -4px 0px 142px 16px rgba(0, 0, 0, 0.45);
     -webkit-box-shadow: -4px 0px 142px 16px rgba(0, 0, 0, 0.45);
     -moz-box-shadow: -4px 0px 142px 16px rgba(0, 0, 0, 0.45);
-    
+
     border: 1px solid rgb(252, 234, 202);
     border-radius: 10px;
     color: rgb(110, 85, 39);
